--- a/Graphics/Graphics.csproj
+++ b/Graphics/Graphics.csproj
@@ -71,11 +71,14 @@
     <Compile Include="EditProducts.xaml.cs">
       <DependentUpon>EditProducts.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EditUsers.xaml.cs">
-      <DependentUpon>EditUsers.xaml</DependentUpon>
+    <Compile Include="EditAccounts.xaml.cs">
+      <DependentUpon>EditAccounts.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Window1.xaml.cs">
-      <DependentUpon>Window1.xaml</DependentUpon>
+    <Compile Include="Employees.xaml.cs">
+      <DependentUpon>Employees.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Vendors.xaml.cs">
+      <DependentUpon>Vendors.xaml</DependentUpon>
     </Compile>
     <Page Include="AdminMenu.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -85,9 +88,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="EditUsers.xaml">
+    <Page Include="EditAccounts.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Employees.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -101,7 +108,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Window1.xaml">
+    <Page Include="Vendors.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
